# GitSync

./: .gitignore  README.md  pubspec.yaml  untranslated.txt
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: generate-apk-release.yml
.maestro/: Cargo.toml
android/: build.gradle  gradle.properties
android/app/: build.gradle  proguard-rules.pro
ios/: untranslated.txt
ios/ForceSyncWidget/: ForceSyncWidget.swift
ios/Runner/: SyncNowIntent.swift
lib/: gitsync_service.dart  global.dart  main.dart
lib/api/: accessibility_service_helper.dart  ai_chat_service.dart  ai_completion_service.dart  ai_provider_validator.dart  ai_stream_client.dart  ai_system_prompt.dart  ai_tool_executor.dart  ai_tools.dart  ai_tools_file.dart  ai_tools_git.dart  ai_tools_provider.dart  colour_provider.dart  helper.dart  issue_template_parser.dart  logger.dart
lib/api/manager/: git_manager.dart  settings_manager.dart  storage.dart
lib/constant/: icons.dart  secrets.dart.template  strings.dart
lib/l10n/: app.de.arb  app_ar.arb  app_en.arb  app_es.arb  app_fr.arb  app_ja.arb  app_localizations.dart  app_localizations_ar.dart  app_localizations_de.dart  app_localizations_en.dart  app_localizations_es.dart  app_localizations_fr.dart  app_localizations_ja.dart  app_localizations_ru.dart  app_localizations_zh.dart  app_ru.arb  app_zh.arb
lib/providers/: riverpod_providers.dart
lib/type/: ai_chat.dart  git_provider.dart  issue_detail.dart  showcase_feature.dart
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/src/: frb_generated.rs
rust/src/api/: git_manager.rs
(+87 files in other folders)
