[package]
name = "rust_lib_GitSync"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
git2 = { version = "0.20.4" }
ssh-key = { version = "0.6.7", features = ["crypto", "encryption"] }
osshkeys = "0.7.0"
regex = "1.12.3"
libssh2-sys = { version = "0.3.1" }
nix = { version = "0.31.2", features = ["fs", "process"] }
tokio = { version = "1", features = ["rt", "time"] }
uuid = {version = "1.22", features = [
    "v4",
]}


[features]
default = ["vendored"]
vendored = ["git2/vendored-libgit2", "git2/vendored-openssl"]
zlib-ng-compat = ["libssh2-sys/zlib-ng-compat"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
